Adding commentary at the end

--- a/Ed_Data_Bayes_Study_02192018.ipynb
+++ b/Ed_Data_Bayes_Study_02192018.ipynb
@@ -939,6 +939,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a school with the median Economic Need Index value and the median ELA proficiency of incoming students, there is only a 11% chance that it is a Well Developed school.  There is a 60% probability that school has a rating of Proficient, and a 28% probability that it is a developing school. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
