Adding commentary at the end

--- a/Ed_Data_Bayes_Study_02192018.ipynb
+++ b/Ed_Data_Bayes_Study_02192018.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook:\n",
+    "- use Naive Bayes to determine Pr(Quality Review Rating | variables)\n",
+    "\n",
+    "Possible follow up: Organize code into a function that takes different variables as inputs. Or just use the Naive Bayes code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
